force-app/main/default/objects/Fraud__c/Fraud__c.object-meta.xml
<CustomObject>
    <label>Fraud</label>
    <nameField>
        <displayFormat>FA-{0000}</displayFormat>
        <label>Fraud Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Frauds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>