force-app/main/default/objects/Fraud__c/fields/Fraud_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Amount__c</fullName>
    <label>Fraud Amount</label>
    <summarizedField>Fraud_Item__c.Amount__c</summarizedField>
    <summaryForeignKey>Fraud_Item__c.Fraud__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>