force-app/main/default/objects/Fraud__c/fields/Fraud_Reason__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Reason__c</fullName>
    <label>Fraud Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fraud Reason 01</fullName>
            </value>
            <value>
                <fullName>Fraud Reason 02</fullName>
            </value>
            <value>
                <fullName>Fraud Reason 03</fullName>
            </value>
            <value>
                <fullName>Fraud Reason 04</fullName>
            </value>
            <value>
                <fullName>Fraud Reason 05</fullName>
            </value>
            <value>
                <fullName>Fraud Reason 06</fullName>
            </value>
            <value>
                <fullName>Fraud Reason 07</fullName>
            </value>
            <value>
                <fullName>Fraud Reason 08</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>