force-app/main/default/objects/Fraud__c/fields/Other_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason_Detail__c</fullName>
    <description>It is mandatory when fraud reason = other</description>
    <label>Other Reason Detail</label>
    <length>64</length>
    <type>Text</type>
</CustomField>