force-app/main/default/objects/Fraud__c/fields/Security_Note__c.field-meta.xml
<CustomField>
    <fullName>Security_Note__c</fullName>
    <label>Security Note</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>